[gd_scene load_steps=2 format=3 uid="uid://8d64atjpd8kh"]

[ext_resource type="Script" uid="uid://mycndr7j5a8r" path="res://groups/hud/settings menu/settings_menu.gd" id="1_ufg0w"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ufg0w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ParticlesLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Particles"

[node name="ParticlesCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="ResetSaveButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Save Data"

[node name="BackButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VolumeSlider" to="." method="_on_volume_changed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/ParticlesCheckBox" to="." method="_on_particles_toggled"]
[connection signal="pressed" from="VBoxContainer/ResetSaveButton" to="." method="_on_reset_save_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
